@@ -1,3 +1,8 @@
+2011-02-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (vc-clearcase-checkout-model): use an implicit
+	checkout model for unreserved checkouts.
+
 2011-01-20  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-clearcase-registered): use "-dir" option for
